gitops/espresso/apps/minecraft/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: minecraft
  labels:
    gateway-access: public
    pod-security.kubernetes.io/enforce: baseline
