gitops/espresso/apps/minecraft/mc-router.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mc-router
  namespace: minecraft
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mc-router
  template:
    metadata:
      labels:
        app: mc-router
    spec:
      containers:
        - name: mc-router
          image: itzg/mc-router:1.47.2@sha256:64ae69eaa7a6800a79bbf962f027f4020878efa25183359115bc7f6ee569c36e
          args:
            - --port=25565
            - --mapping=vanilla.eldians.com=vanilla.minecraft.svc.cluster.local:25565,creative.eldians.com=creative.minecraft.svc.cluster.local:25565,revelation.eldians.com=revelation.minecraft.svc.cluster.local:25565
          ports:
            - containerPort: 25565
              name: minecraft
          startupProbe:
            tcpSocket:
              port: minecraft
            periodSeconds: 5
            failureThreshold: 12
          livenessProbe:
            tcpSocket:
              port: minecraft
            periodSeconds: 30
          readinessProbe:
            tcpSocket:
              port: minecraft
            periodSeconds: 10
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: mc-router
  namespace: minecraft
  annotations:
    lbipam.cilium.io/ips: 10.0.188.50,fd7a:115c:a1e0:188::50
    coredns.io/hostname: vanilla.eldians.com,creative.eldians.com,revelation.eldians.com
spec:
  type: LoadBalancer
  ipFamilyPolicy: PreferDualStack
  ipFamilies:
    - IPv4
    - IPv6
  selector:
    app: mc-router
  ports:
    - name: minecraft
      port: 25565
      targetPort: minecraft
