gitops/espresso/apps/minecraft/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pack-server-public
  namespace: minecraft
spec:
  parentRefs:
    - name: public
      namespace: gateway
      sectionName: https
  hostnames:
    - packs.eldians.com
  rules:
    - backendRefs:
        - name: pack-server
          port: 80
